<resources>
    <string name="app_name">BinusPark</string>
    <string name="back_button">Press for previous page</string>
    <string name="profile_title">User Profile</string>\
    <string name="profile_dataT1">Full name</string>
    <string name="profile_data1">Amanda Chase</string>
    <string name="profile_dataT2">Email address</string>
    <string name="profile_data2">amychase@gmail.com</string>
    <string name="profile_dataT3">Phone number</string>
    <string name="profile_data3">09033421159</string>
    <string name="profile_dataT4">Password</string>
    <string name="profile_data4">09033421159</string>
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="edit1">Save</string>
    <string name="logout">Log out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university_list">UniversityList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>