<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"

    tools:context=".">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/ic_action_back"
        android:contentDescription="@string/back_button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePicture"
        android:layout_gravity="center"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cat"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_dataT1"
            android:textSize="14sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/profile_data1"
            android:hint="@string/full_name"
            android:autofillHints="Full name"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_dataT2"
            android:textSize="14sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/profile_data2"
            android:hint="@string/email"
            android:autofillHints="Email Address"
            android:inputType="textEmailAddress"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_dataT3"
            android:textSize="14sp"
            android:textColor="@color/gray"/>

        <EditText
            android:enabled="false"
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/profile_data3"
            android:hint="@string/phone"
            android:autofillHints="Phone number"
            android:inputType="phone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_dataT4"
            android:textSize="14sp"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:text="@string/profile_data4"
            android:hint="@string/password"
            android:autofillHints="Password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/profile_update"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/edit"
        android:backgroundTint="@color/purple"
        />
    <TextView
        android:id="@+id/logout_button"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/logout"
        />


</LinearLayout>